# finsight

./: .gitignore  CLAUDE.md  index.html  jsdoc.json  package-lock.json  package.json  vite.config.js
scripts/: seed_data.py
src/: App.vue  main.js
src-tauri/: .taurignore  Cargo.toml  finsight.db  tauri.conf.json
src-tauri/src/: database.rs  main.rs  migrations.rs
src-tauri/src/database/: accounts.rs  categories.rs  migrations.rs  mod.rs  transactions.rs
src/components/: AccountNavItem.vue  AddAccountModal.vue  AddTransactionModal.vue  AppSidebar.vue  Sidebar.vue
src/composables/: useAccounts.js
src/router/: router.js
src/styles/: globals.css
src/utils/: utils.js
src/views/: AccountDetails.vue  AccountDetails_old.vue  Accounts.vue  Categories.vue  Dashboard.vue  Import.vue  Reports.vue
